--- a/CSS/secondCSS/curricula_second.css
+++ b/CSS/secondCSS/curricula_second.css
@@ -182,6 +182,10 @@ header .ham_menu .ham_btn .btn_line {
 }
 
 /*-----section-----*/
+section ul {
+  padding: 0 16px;
+}
+
 .title {
   position: relative;
   margin-top: 80px;
@@ -221,12 +225,19 @@ header .ham_menu .ham_btn .btn_line {
   padding: 16px 0 16px 40px;
   border-bottom: 3px solid #73B7BB;
   color: #343434;
-  margin: 16px;
+  padding: 24px 0 24px 40px;
+}
+.content .last {
+  border-bottom: 0;
 }
 .content p {
   color: #343434;
   font-size: 14px;
   line-height: 24px;
+}
+
+#last {
+  border-top: 3px solid #73B7BB;
 }
 
 .coding ul,
@@ -278,7 +289,6 @@ footer {
   justify-content: end;
   border-top: 3px solid #1361A5;
   background-color: #ffffff;
-  margin-top: 32px;
 }
 footer .footer_link {
   margin: 0 auto;
