--- a/CSS/TopCSS/index.css
+++ b/CSS/TopCSS/index.css
@@ -562,14 +562,23 @@ Tab Version
     margin: 8px;
   }
   .menu_body {
-    z-index: 10;
     width: 70vw;
-    height: 100vh;
-    padding-top: 20%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
     box-shadow: -5px 0px 20px rgba(10, 60, 103, 0.5764705882);
+  }
+}
+@media screen and (min-width: 1024px) {
+  .menu_body {
+    width: 50vw;
+    box-shadow: -5px 0px 20px rgba(10, 60, 103, 0.5764705882);
+  }
+  footer {
+    height: 100%;
+  }
+  footer .footer_link .footer_link_a {
+    display: flex;
+    flex-direction: unset;
+  }
+  footer .footer_link .footer_link_a a {
+    margin: 16px;
   }
 }/*# sourceMappingURL=index.css.map */
