--- a/CSS/firstCSS/curricula_first.scss
+++ b/CSS/firstCSS/curricula_first.scss
@@ -288,7 +288,7 @@ section ul{
 
         font-size: 16px;
 
-        padding: 24px 0 24px 40px;
+        padding: 32px 0 32px 40px;
 
         border-bottom: 3px solid $main_color;
 
@@ -380,7 +380,7 @@ footer{
     border-top: 3px solid $base_color;
     background-color: $bg_color;
 
-    margin-top: 16px;
+    // margin-top: 16px;
 
     .footer_link{
         margin: 0 auto;
