--- a/CSS/TopCSS/index.scss
+++ b/CSS/TopCSS/index.scss
@@ -654,11 +654,6 @@ Tab Version
     }
 
     .test_intro_content::before{
-        content: '';
-        background-image: url(../../img/tag_アートボード\ 1.svg);
-        position: absolute;
-        top: -30px;
-        background-repeat: no-repeat;
         height: 90px;
         width: 90px;
     }
@@ -673,7 +668,6 @@ Tab Version
         padding-top: 24px;
 
         .footer_link{
-            // gap: 200px;
             gap: 0;
             width: 90%;
 
@@ -695,6 +689,78 @@ Tab Version
 }
 
 @media screen and (min-width: 1024px){
+
+    main{
+        width: 100%;
+
+        margin: 0 auto;
+
+        .intro, .test_intro, .test_intro_content{
+            width: 80%;
+        }
+
+        .test_intro_content{
+            margin: 0 auto;
+        }
+    }
+
+    body{
+        width: 100%;
+    }
+
+    .KV{
+        height: 600px;
+        width: 100%;
+        overflow: hidden;
+        .key_v{
+            background-image: url(../../img/KV02.jpg);
+            background-repeat: no-repeat;
+            background-size: 100%;
+            height: 100%;
+            width: 100%;
+            background-position: 0 15%;
+
+            left: 50%;
+            transform: translateX(-50%);
+
+            .title01{
+                font-size: 50px;
+                margin: 0;
+                bottom: 300px;
+                left: 50px !important;
+
+                background-color: rgba(255, 255, 255, 0);
+                color: $bg_color;
+
+                animation: none;
+            }
+            .title02{
+                font-size: 50px;
+                margin: 0;
+                bottom: 200px;
+                left: 50px !important;
+                right: 50px;
+
+                padding-bottom: 24px;
+
+                background-color: rgba(255, 255, 255, 0);
+                color: $bg_color;
+
+                border-bottom: 3px solid $bg_color;
+
+                animation: none;
+            }
+            .title03{
+                animation: none;
+                font-size: 30px;
+                bottom: 126px;
+                right: 50px !important;
+
+                background-color: rgba(255, 255, 255, 0);
+                color: $bg_color;
+            }
+        }
+    }
 
     .menu_body{
         width: 50vw;
