--- a/CSS/IntroCSS/intro.scss
+++ b/CSS/IntroCSS/intro.scss
@@ -637,5 +637,15 @@ Tab Version
         justify-content: center;
         align-items: center;
 
-        box-shadow: -5px 0px 20px #0a3c6793;    }
+        box-shadow: -5px 0px 20px #0a3c6793;
+    }
+
+    main{
+        h1{
+            font-size: 40px;
+        }
+        h2{
+            font-size: 32px;
+        }
+    }
 }
