--- a/CSS/TopCSS/index.css
+++ b/CSS/TopCSS/index.css
@@ -633,4 +633,7 @@ Tab Version
   footer .footer_link .footer_link_a a {
     margin: 16px;
   }
+  .intro h2 {
+    font-size: 32px;
+  }
 }/*# sourceMappingURL=index.css.map */
