--- a/CSS/IntroCSS/intro.css
+++ b/CSS/IntroCSS/intro.css
@@ -103,7 +103,7 @@ header .ham_menu .ham_btn .btn_line {
   z-index: 10;
   width: 100vw;
   height: 100vh;
-  padding-top: 20%;
+  padding-top: 8%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -113,7 +113,7 @@ header .ham_menu .ham_btn .btn_line {
   width: 200px;
   height: auto;
   position: absolute;
-  top: 8%;
+  top: 5%;
 }
 .menu_body .menu_link {
   list-style: none;
@@ -413,6 +413,26 @@ main a:hover, main ul > li > a:hover {
   color: #1361A5;
 }
 
+.menu_link li a:hover {
+  background-color: #73B7BB;
+  color: #fff;
+  transition-duration: 0.3s;
+}
+
+.menu_btn li .menu_btn01:hover {
+  background-color: #fff;
+  border: 3px solid #73B7BB;
+  color: #343434;
+  transition-duration: 0.3s;
+}
+
+.menu_btn li .menu_btn02:hover {
+  background-color: #73B7BB;
+  border: 3px solid #73B7BB;
+  color: #fff;
+  transition-duration: 0.3s;
+}
+
 /*-----clicked style-----*/
 .btn_line_clicked::before {
   transform: rotate(45deg);
@@ -482,14 +502,7 @@ Tab Version
     margin: 8px;
   }
   .menu_body {
-    z-index: 10;
     width: 70vw;
-    height: 100vh;
-    padding-top: 20%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
     box-shadow: -5px 0px 20px rgba(10, 60, 103, 0.5764705882);
   }
   main h1 {
@@ -497,5 +510,47 @@ Tab Version
   }
   main h2 {
     font-size: 32px;
+  }
+}
+/*--------------------
+
+PC Version
+
+--------------------*/
+@media screen and (min-width: 1024px) {
+  main {
+    width: 100%;
+    margin: 0 auto;
+  }
+  main .content {
+    width: 80%;
+    margin: 0 auto;
+  }
+  main .content p {
+    font-size: 18px;
+    line-height: 40px;
+  }
+  main .content h2 {
+    font-size: 30px;
+  }
+  main .webdesign_intro {
+    margin-top: 80px;
+  }
+  main .test_lead {
+    width: 100%;
+  }
+  main .test_lead h3 {
+    font-size: 24px;
+  }
+  footer .footer_link {
+    gap: 0;
+    width: 90%;
+  }
+  footer .footer_link .footer_link_a {
+    display: flex;
+    flex-direction: unset;
+  }
+  footer .footer_link .footer_link_a a {
+    margin: 8px 24px;
   }
 }/*# sourceMappingURL=intro.css.map */
