--- a/CSS/IntroCSS/intro.scss
+++ b/CSS/IntroCSS/intro.scss
@@ -143,7 +143,7 @@ header{
 
     width: 100vw;
     height: 100vh;
-    padding-top: 20%;
+    padding-top: 8%;
 
     display: flex;
     flex-direction: column;
@@ -155,7 +155,7 @@ header{
         height: auto;
 
         position: absolute;
-        top: 8%;
+        top: 5%;
 
     }
 
@@ -538,6 +538,31 @@ main a:hover, main ul>li>a:hover{
     color: $base_color;
 }
 
+.menu_link li a:hover{
+    background-color: $main_color;
+    // border: 3px solid $bg_color;
+    color: #fff;
+
+    transition-duration: 0.3s;
+}
+
+.menu_btn li .menu_btn01:hover{
+    background-color: #fff;
+    border: 3px solid $main_color;
+    color: #343434;
+
+    transition-duration: 0.3s;
+
+}
+.menu_btn li .menu_btn02:hover{
+    background-color: $main_color;
+    border: 3px solid $main_color;
+    color: #fff;
+
+    transition-duration: 0.3s;
+
+}
+
 /*-----clicked style-----*/
 
 .btn_line_clicked::before{
@@ -626,18 +651,8 @@ Tab Version
     }
 
     .menu_body{
-        z-index: 10;
-    
         width: 70vw;
-        height: 100vh;
-        padding-top: 20%;
-    
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-
-        box-shadow: -5px 0px 20px #0a3c6793;
+        box-shadow: -5px 0px 20px #0a3c6793;    
     }
 
     main{
@@ -646,6 +661,61 @@ Tab Version
         }
         h2{
             font-size: 32px;
+        }
+    }
+}
+
+/*--------------------
+
+PC Version
+
+--------------------*/
+
+@media screen and (min-width: 1024px){
+    main{
+        width: 100%;
+
+        margin: 0 auto;
+
+        .content{
+            width: 80%;
+
+            margin: 0 auto;
+            p{
+                font-size: 18px;
+                line-height: 40px;
+            }
+            h2{
+                font-size: 30px;
+            }
+
+        }
+        .webdesign_intro{
+            margin-top: 80px;
+        }
+        .test_lead{
+            width: 100%;
+
+            h3{
+                font-size: 24px;
+            }
+        }
+    }
+
+    footer{
+
+        .footer_link{
+            gap: 0;
+            width: 90%;
+
+            .footer_link_a{
+                display: flex;
+                flex-direction: unset;
+
+                a{
+                    margin: 8px 24px;
+                }
+            }
         }
     }
 }
