--- a/CSS/TopCSS/index.scss
+++ b/CSS/TopCSS/index.scss
@@ -140,7 +140,7 @@ header{
 
     width: 100vw;
     height: 100vh;
-    padding-top: 20%;
+    padding-top: 8%;
 
     display: flex;
     flex-direction: column;
@@ -152,7 +152,7 @@ header{
         height: auto;
 
         position: absolute;
-        top: 8%;
+        top: 5%;
 
     }
 
@@ -201,7 +201,7 @@ header{
         flex-direction: column;
 
         a{
-            margin-top: 48px;
+            margin-top: 20%;
             text-decoration: none;
             display: flex;
             justify-content: center;
@@ -786,6 +786,20 @@ Tab Version
     .intro{
         h2{
             font-size: 32px;
+        }
+        p{
+            font-size: 18px;
+
+            line-height: 40px;
+        }
+    }
+
+    .test_intro_content{
+        h2{
+            font-size: 24px;
+        }
+        p{
+            font-size: 18px;
         }
     }
 
