--- a/CSS/testCSS/test.css
+++ b/CSS/testCSS/test.css
@@ -219,6 +219,7 @@ b {
 .test_show {
   width: 100%;
   height: 100%;
+  min-height: 760px;
   border: 3px solid #73B7BB;
   border-radius: 20px;
   padding: 40px 8px;
