--- a/CSS/testCSS/test.scss
+++ b/CSS/testCSS/test.scss
@@ -298,6 +298,7 @@ b{
 .test_show{
     width: 100%;
     height: 100%;
+    min-height: 760px;
 
     border: 3px solid $main_color;
     border-radius: 20px;
