--- a/CSS/testCSS/test.scss
+++ b/CSS/testCSS/test.scss
@@ -308,6 +308,8 @@ b{
     top: -100%;
     right: 0;
 
+    overflow: scroll;
+
     background-color: $bg_color;
 
     transition-duration: 0.8s;
