--- a/CSS/testCSS/test.css
+++ b/CSS/testCSS/test.css
@@ -23,6 +23,7 @@ body {
   background-color: #ffffff;
   width: 100%;
   height: 100%;
+  min-height: 760px;
   border-radius: 20px;
   overflow: hidden;
 }
