--- a/CSS/testCSS/test.scss
+++ b/CSS/testCSS/test.scss
@@ -39,6 +39,7 @@ body{
         background-color: $bg_color;
         width: 100%;
         height: 100%;
+        min-height: 760px;
 
         border-radius: 20px;
 
