--- a/CSS/testCSS/test.scss
+++ b/CSS/testCSS/test.scss
@@ -39,7 +39,6 @@ body{
         background-color: $bg_color;
         width: 100%;
         height: 100%;
-        min-height: 760px;
 
         border-radius: 20px;
 
@@ -299,7 +298,7 @@ b{
 .test_show{
     width: 100%;
     height: 100%;
-    min-height: 760px;
+    // min-height: 760px;
 
     border: 3px solid $main_color;
     border-radius: 20px;
@@ -309,7 +308,7 @@ b{
     top: -100%;
     right: 0;
 
-    overflow: scroll;
+    // overflow: scroll;
 
     background-color: $bg_color;
 
