--- a/CSS/testCSS/test.css
+++ b/CSS/testCSS/test.css
@@ -198,7 +198,7 @@ b {
   text-align: center;
   background-color: #73B7BB;
   border-radius: 16px;
-  margin: 32px 0;
+  margin: 24px 0 0 0;
 }
 
 .quiz_content::before {
