--- a/CSS/testCSS/test.scss
+++ b/CSS/testCSS/test.scss
@@ -275,7 +275,7 @@ b{
     background-color: $main_color;
     border-radius: 16px ;
 
-    margin: 32px 0;
+    margin: 24px 0 0 0;
 }
 .quiz_content::before{
     content: '';
