--- a/CSS/secondCSS/curricula_second.scss
+++ b/CSS/secondCSS/curricula_second.scss
@@ -353,19 +353,39 @@ h3::before{
     transform: translateY(-50%);
     left: 16px;
 }
-h3::after{
-    content: '';
+// h3::after{
+//     content: '';
+//     position: absolute;
+
+//     width: 20px;
+//     height: 16px;
+
+//     background-image: url(../../img/opencontent.svg);
+//     background-repeat: no-repeat;
+
+//     top: 50%;
+//     transform: translateY(-50%);
+//     right: 16px;
+// }
+
+span{
     position: absolute;
-
-    width: 20px;
-    height: 16px;
-
-    background-image: url(../../img/opencontent.svg);
-    background-repeat: no-repeat;
-
     top: 50%;
     transform: translateY(-50%);
     right: 16px;
+
+    img{
+        width: 20px;
+
+        transition-duration: 0.3s;
+    }
+}
+.span_open_content{
+    img{
+        transform: rotate(180deg);
+
+        transition-duration: 0.3s;
+    }
 }
 
 /*-----footer-----*/
