--- a/CSS/IntroCSS/intro.scss
+++ b/CSS/IntroCSS/intro.scss
@@ -681,12 +681,52 @@ PC Version
             width: 80%;
 
             margin: 0 auto;
-            p{
-                font-size: 18px;
-                line-height: 40px;
-            }
-            h2{
-                font-size: 30px;
+
+            .what{
+
+                margin: 40px auto;
+
+                display: grid;
+                grid-template-columns: 1fr 3fr;
+                grid-template-rows: auto;
+                grid-template-areas: "img title"
+                                    "img content";
+
+                gap: 20px;
+
+                .img{
+                    // border: none;
+                    grid-area: img;
+                    width: 400px !important;
+                    height: auto !important;
+
+                    padding: 0;
+
+                    top: 0;
+                    left: 0;
+
+                    img{
+                        border: none;
+                        width: 400px !important;
+                        height: auto !important;
+
+                        top: 0;
+                        left: 0;
+                    }
+                }
+
+                p{
+                    grid-area: content;
+                    font-size: 18px;
+                    line-height: 40px;
+                }
+                h2{
+                    grid-area: title;
+                    font-size: 30px;
+
+                    padding: 16px 0 0 0;
+                }
+                
             }
 
         }
@@ -700,6 +740,13 @@ PC Version
                 font-size: 24px;
             }
         }
+    }
+
+    .img01::before{
+        display: none;
+    }
+    .img03::before{
+        display: none;
     }
 
     footer{
