--- a/CSS/firstCSS/curricula_first.scss
+++ b/CSS/firstCSS/curricula_first.scss
@@ -281,6 +281,8 @@ section ul{
         background-color: $base_color;
         color: $bg_color;
         font-size: 24px;
+
+        position: relative;
     }
 
     h3{
