--- a/CSS/firstCSS/curricula_first.css
+++ b/CSS/firstCSS/curricula_first.css
@@ -218,6 +218,7 @@ section ul {
   background-color: #1361A5;
   color: #ffffff;
   font-size: 24px;
+  position: relative;
 }
 .content h3 {
   position: relative;
