--- a/CSS/IntroCSS/intro.css
+++ b/CSS/IntroCSS/intro.css
@@ -527,7 +527,7 @@ PC Version
     margin: 0 auto;
   }
   main .content .what {
-    margin: 40px auto;
+    margin: 56px auto;
     display: grid;
     grid-template-columns: 1fr 3fr;
     grid-template-rows: auto;
@@ -535,16 +535,18 @@ PC Version
     gap: 20px;
   }
   main .content .what .img {
+    border: 10px solid #1361A5;
     grid-area: img;
-    width: 400px !important;
+    width: 500px !important;
     height: auto !important;
     padding: 0;
     top: 0;
     left: 0;
+    box-shadow: 4px 4px 5px 1px #93a6a8;
   }
   main .content .what .img img {
     border: none;
-    width: 400px !important;
+    width: 500px !important;
     height: auto !important;
     top: 0;
     left: 0;
