--- a/CSS/IntroCSS/intro.scss
+++ b/CSS/IntroCSS/intro.scss
@@ -751,6 +751,11 @@ PC Version
         display: none;
     }
 
+    .menu_body{
+        width: 50vw;
+        box-shadow: -5px 0px 20px #0a3c6793;    
+    }
+
     footer{
 
         .footer_link{
