--- a/CSS/secondCSS/curricula_second.css
+++ b/CSS/secondCSS/curricula_second.css
@@ -390,6 +390,10 @@ footer .copyright {
   transition-duration: 0.3s;
 }
 
+.footer_link a:hover {
+  color: #1361A5;
+}
+
 /*--------------------
 
 Tab Version
