--- a/CSS/IntroCSS/intro.scss
+++ b/CSS/IntroCSS/intro.scss
@@ -204,7 +204,7 @@ header{
         flex-direction: column;
 
         a{
-            margin-top: 48px;
+            margin-top: 10%;
             text-decoration: none;
             display: flex;
             justify-content: center;
