--- a/CSS/TopCSS/index.css
+++ b/CSS/TopCSS/index.css
@@ -248,6 +248,18 @@ section {
 
 .intro {
   margin: 0 auto;
+  opacity: 0;
+  transition-duration: 0.5s;
+}
+
+.Web_design_show {
+  opacity: 1;
+  transition-duration: 0.5s;
+}
+
+.Web_learning_show {
+  opacity: 1;
+  transition-duration: 0.5s;
 }
 
 .Web_learning {
@@ -311,6 +323,16 @@ p {
   background-color: #fff;
   border: 3px solid #73B7BB;
   transition-duration: 0.3s;
+}
+
+.intro_test {
+  opacity: 0;
+  transition-duration: 0.5s;
+}
+
+.intro_test_show {
+  opacity: 1;
+  transition-duration: 0.5s;
 }
 
 .test_all {
@@ -518,6 +540,17 @@ section a:hover {
     right: 16px;
   }
 }
+@keyframes text_pc {
+  0% {
+    left: 66px;
+  }
+  50% {
+    left: 74px;
+  }
+  100% {
+    left: 66px;
+  }
+}
 /*--------------------
 
 Tab Version
@@ -576,7 +609,7 @@ Tab Version
     width: 100%;
   }
   .KV {
-    height: 600px;
+    height: 90vh;
     width: 100%;
     overflow: hidden;
   }
@@ -591,19 +624,18 @@ Tab Version
     transform: translateX(-50%);
   }
   .KV .key_v .title01 {
-    font-size: 50px;
+    font-size: 60px;
     margin: 0;
     bottom: 300px;
-    left: 50px !important;
+    left: 50px;
     background-color: rgba(255, 255, 255, 0);
     color: #ffffff;
-    animation: none;
   }
   .KV .key_v .title02 {
-    font-size: 50px;
+    font-size: 60px;
     margin: 0;
     bottom: 200px;
-    left: 50px !important;
+    left: 50px;
     right: 50px;
     padding-bottom: 24px;
     background-color: rgba(255, 255, 255, 0);
@@ -613,8 +645,8 @@ Tab Version
   }
   .KV .key_v .title03 {
     animation: none;
-    font-size: 30px;
-    bottom: 126px;
+    font-size: 40px;
+    bottom: 120px;
     right: 50px !important;
     background-color: rgba(255, 255, 255, 0);
     color: #ffffff;
