--- a/CSS/TopCSS/index.scss
+++ b/CSS/TopCSS/index.scss
@@ -771,6 +771,8 @@ Tab Version
                 background-color: rgba(255, 255, 255, 0);
                 color: $bg_color;
 
+                animation: none;
+
             }
             .title02{
                 font-size: 60px;
