--- a/CSS/TopCSS/index.css
+++ b/CSS/TopCSS/index.css
@@ -126,16 +126,11 @@ header .ham_menu .ham_btn .btn_line {
   height: 100%;
   /*-----list style reset-----*/
   padding-left: 0;
-  -webkit-padding-start: 0px;
-          padding-inline-start: 0px;
-  -webkit-margin-before: 0em;
-          margin-block-start: 0em;
-  -webkit-margin-after: 0em;
-          margin-block-end: 0em;
-  -webkit-margin-start: 0px;
-          margin-inline-start: 0px;
-  -webkit-margin-end: 0px;
-          margin-inline-end: 0px;
+  padding-inline-start: 0px;
+  margin-block-start: 0em;
+  margin-block-end: 0em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
   /*--------------------*/
 }
 .menu_body .menu_link li a {
@@ -630,6 +625,7 @@ Tab Version
     left: 50px;
     background-color: rgba(255, 255, 255, 0);
     color: #ffffff;
+    animation: none;
   }
   .KV .key_v .title02 {
     font-size: 60px;
