--- a/CSS/testCSS/test.css
+++ b/CSS/testCSS/test.css
@@ -147,8 +147,8 @@ body {
 .score_page .rank {
   position: relative;
   margin: 40px auto;
-  width: 180px;
-  height: 180px;
+  width: 100px;
+  height: 100px;
 }
 .score_page .commend {
   position: relative;
@@ -232,7 +232,7 @@ b {
 
 .rank_btn {
   position: absolute;
-  bottom: 50px;
+  bottom: 30px;
   left: 50%;
   transform: translateX(-50%);
 }
@@ -338,8 +338,8 @@ Tab Version
   .score_page .rank {
     position: relative;
     margin: 40px auto;
-    width: 180px;
-    height: 180px;
+    width: 120px;
+    height: 120px;
   }
   .score_page .commend {
     font-size: 18px;
@@ -355,8 +355,54 @@ Tab Version
     margin: 32px 40px;
     font-size: 16px;
   }
+  .test_body .frame .first_page {
+    background-size: 400px;
+    background-position: 50% 600px;
+  }
+  .test_body .frame .first_page button {
+    width: 250px;
+    height: 80px;
+    border-radius: 50px;
+    font-size: 16px;
+  }
+  .score_page .commend {
+    line-height: 50px;
+    font-size: 20px;
+  }
+  .score_page .commend b {
+    font-size: 28px;
+  }
+  .score_page .rank_btn {
+    width: 300px;
+  }
+  .score_page .rank_btn button {
+    width: 300px;
+    height: 80px;
+    border-radius: 100px;
+    font-size: 16px;
+  }
+  .score_page .rank {
+    width: 200px;
+    height: 200px;
+  }
+  .test .button button {
+    width: 250px;
+    height: 80px;
+    border-radius: 50px;
+    font-size: 16px;
+  }
 }
 @media screen and (min-width: 1024px) {
+  .test_body .frame .first_page {
+    background-size: 400px;
+    background-position: 50% 600px;
+  }
+  .test_body .frame .first_page button {
+    width: 250px;
+    height: 80px;
+    border-radius: 50px;
+    font-size: 16px;
+  }
   .quiz_content {
     margin: 32px 80px;
     font-size: 18px;
@@ -367,5 +413,24 @@ Tab Version
   }
   .score_page .commend b {
     font-size: 28px;
+  }
+  .score_page .rank_btn {
+    width: 300px;
+  }
+  .score_page .rank_btn button {
+    width: 300px;
+    height: 80px;
+    border-radius: 100px;
+    font-size: 16px;
+  }
+  .score_page .rank {
+    width: 200px;
+    height: 200px;
+  }
+  .test .button button {
+    width: 250px;
+    height: 80px;
+    border-radius: 50px;
+    font-size: 16px;
   }
 }/*# sourceMappingURL=test.css.map */
