--- a/CSS/IntroCSS/intro.css
+++ b/CSS/IntroCSS/intro.css
@@ -204,7 +204,7 @@ main h2 {
   line-height: 40px;
   font-weight: normal;
   text-align: center;
-  padding: 32px 0;
+  padding: 32px 20px;
 }
 main .webdesign_intro {
   font-size: 14px;
